--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -14,7 +14,7 @@ body {
   background: #e3f4ff;
   padding: 8px;
   margin: 7px;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 900;
   
 }
@@ -38,7 +38,9 @@ button {
   display: block;
   margin: auto;
   text-align: center;
-  padding: 10px;
+  padding: 8px;
+  padding-left: 24px;
+  padding-right: 24px;
   background: white;
   border: 1px solid #eee;
 }
