--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,16 +1,38 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
   width: 100px;
   height: 100px;
+  
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 36px;
 }
+
+.container {
+  display: flex;
+  justify-content: center;
+  gap: 32px;
+}
+
+.info {
+  display: flex;
+  gap: 32px;
+  flex-direction: column;
+  width: 200px;
+  align-items: center;
+}
+
+
+
 
 /* do not edit this footer */
 .footer {
