--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,10 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  /* flex-direction: row; */
+
+  
 }
 
 .icon {
@@ -33,6 +37,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  display: flex;
+  flex-grow: 1;
+  flex-basis: 50%;
+  margin: 15px;
+  
+  
 }
 
 .close-button {
@@ -43,9 +53,9 @@ body {
   font-size: 16px;
   height: 24px;
   width: 24px;
-  display: flex;
   align-items: center;
   justify-content: center;
+ 
 }
 
 button {
@@ -63,4 +73,31 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.header-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 8px;
+}
+
+.header {
+  display: flex;
+  margin-right: 130px;
+}
+
+.text {
+  display: flex;
+  margin-right: 30px;
+}
+
+.rows {
+  display: flex;
+  flex-flow: wrap row;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  gap: 15px;
 }
